--- a/e-commerce.html
+++ b/e-commerce.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="assets/makara/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -44,7 +45,7 @@
 
           <!-- Product 1 -->
           <div class="col-sm-12 col-md-6 col-lg-4">
-            <div class="card shadow border-0 rounded-3">
+            <div class="card shadow border-0 rounded-3  product-card" >
               <img src="assets/makara/image/image01.png" class="card-img-top" alt="Product" style="height: 350px;">
               <div class="card-body">
                 <i class="fa-solid fa-star text-warning"></i>
@@ -61,8 +62,8 @@
                       readonly>
                     <button class="btn btn-outline-secondary" onclick="changeQty(1,'qty1')">+</button>
                   </div>
-                  <button class="btn btn-success btn-sm" onclick="addToCart('ថូផ្កា', 5.00,'qty1')">
-                    <i class="fa-solid fa-cart-shopping fa-beat"></i> Add to Cart
+                  <button class="btn btn-success btn-sm fs-kp" onclick="addToCart('ថូផ្កា', 5.00,'qty1')">
+                    <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
                   </button>
                 </div>
               </div>
@@ -71,7 +72,7 @@
 
           <!-- Product 2 -->
           <div class="col-sm-12 col-md-6 col-lg-4">
-            <div class="card shadow border-0 rounded-3">
+            <div class="card shadow border-0 rounded-3  product-card">
               <img src="assets/makara/image/image04.png" class="card-img-top" alt="Product" style="height: 350px;">
               <div class="card-body">
                 <i class="fa-solid fa-star text-warning"></i>
@@ -89,8 +90,8 @@
                       readonly>
                     <button class="btn btn-outline-secondary" onclick="changeQty(1,'qty2')">+</button>
                   </div>
-                  <button class="btn btn-success btn-sm" onclick="addToCart('កៅស៊ូ ប្លាស្ទិចថ្លា', 75.00,'qty2')">
-                    <i class="fa-solid fa-cart-shopping fa-beat"></i> Add to Cart
+                  <button class="btn btn-success btn-sm fs-kp" onclick="addToCart('កៅស៊ូ ប្លាស្ទិចថ្លា', 75.00,'qty2')">
+                    <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
                   </button>
                 </div>
               </div>
@@ -99,7 +100,7 @@
 
           <!-- Product 3 -->
           <div class="col-sm-12 col-md-6 col-lg-4">
-            <div class="card shadow border-0 rounded-3">
+            <div class="card shadow border-0 rounded-3  product-card">
               <img src="assets/makara/image/image05.png" class="card-img-top" alt="Product" style="height: 350px;">
               <div class="card-body">
                 <i class="fa-solid fa-star text-warning"></i>
@@ -116,8 +117,8 @@
                       readonly>
                     <button class="btn btn-outline-secondary" onclick="changeQty(1,'qty3')">+</button>
                   </div>
-                  <button class="btn btn-success btn-sm" onclick="addToCart('តុប្លាស្ទិច', 10.00,'qty3')">
-                    <i class="fa-solid fa-cart-shopping fa-beat"></i> Add to Cart
+                  <button class="btn btn-success btn-sm fs-kp" onclick="addToCart('តុប្លាស្ទិច', 10.00,'qty3')">
+                    <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
                   </button>
                 </div>
               </div>
@@ -126,7 +127,7 @@
 
           <!-- Product 4 -->
           <div class="col-sm-12 col-md-6 col-lg-4">
-            <div class="card shadow border-0 rounded-3">
+            <div class="card shadow border-0 rounded-3  product-card">
               <img src="assets/makara/image/image06.png" class="card-img-top" alt="Product" style="height: 350px;">
               <div class="card-body">
                 <i class="fa-solid fa-star text-warning"></i>
@@ -143,8 +144,8 @@
                       readonly>
                     <button class="btn btn-outline-secondary" onclick="changeQty(1,'qty4')">+</button>
                   </div>
-                  <button class="btn btn-success btn-sm" onclick="addToCart('​ដបប្លាស្ទិច', 3.00,'qty4')">
-                    <i class="fa-solid fa-cart-shopping fa-beat"></i> Add to Cart
+                  <button class="btn btn-success btn-sm fs-kp" onclick="addToCart('​ដបប្លាស្ទិច', 3.00,'qty4')">
+                    <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
                   </button>
                 </div>
               </div>
@@ -153,7 +154,7 @@
 
           <!-- Product 5 -->
           <div class="col-sm-12 col-md-6 col-lg-4">
-            <div class="card shadow border-0 rounded-3">
+            <div class="card shadow border-0 rounded-3  product-card">
               <img src="assets/makara/image/image07.png" class="card-img-top" alt="Product" style="height: 350px;">
               <div class="card-body">
                 <i class="fa-solid fa-star text-warning"></i>
@@ -170,8 +171,8 @@
                       readonly>
                     <button class="btn btn-outline-secondary" onclick="changeQty(1,'qty5')">+</button>
                   </div>
-                  <button class="btn btn-success btn-sm" onclick="addToCart('ធុងទឹកប្លាស្ទិច', 7.00,'qty5')">
-                    <i class="fa-solid fa-cart-shopping fa-beat"></i> Add to Cart
+                  <button class="btn btn-success btn-sm fs-kp" onclick="addToCart('ធុងទឹកប្លាស្ទិច', 7.00,'qty5')">
+                    <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
                   </button>
                 </div>
               </div>
@@ -180,11 +181,106 @@
         </div>
       </div>
     </section>
-    <!-- end  -->
+    <!-- end type Plastic-->
+
+    <!-- type paper -->
+    <section style="margin-top: 80px;">
+      <div class="container">
+        <h3 class="fw-bold mb-4 fs-kp text-center">ផលិតផលក្រដាសកែឆ្នៃ</h3>
+        <div class="row gy-4">
+          <!-- product 1 -->
+          <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="card shadow border-0 rounded-3  product-card" >
+              <img src="assets/makara/image/image08.jpg" class="card-img-top" alt="Product" style="height: 350px;">
+              <div class="card-body">
+                <i class="fa-solid fa-star text-warning"></i>
+                <i class="fa-solid fa-star text-warning"></i>
+                <i class="fa-solid fa-star text-warning"></i>
+                <i class="fa-solid fa-star text-warning"></i>
+                <i class="fa-solid fa-star-half-stroke text-warning"></i>
+                <h1 class="card-title mt-2 fs-kp" style="font-size: 22px;"><span>ឈ្មោះ​ ៖</span>​សៀវភៅ</h1>
+                <p class="card-text fs-kp">តម្លៃ៖​ <span>$3.00</span></p>
+                <div class="d-flex align-items-center justify-content-between">
+                  <div class="d-flex align-items-center">
+                    <button class="btn btn-outline-secondary" onclick="changeQty(-1,'qty6')">-</button>
+                    <input type="text" id="qty6" value="1" class="form-control text-center mx-2" style="width:60px;"
+                      readonly>
+                    <button class="btn btn-outline-secondary" onclick="changeQty(1,'qty6')">+</button>
+                  </div>
+                  <button class="btn btn-success btn-sm fs-kp" onclick="addToCart('សៀវភៅ', 3.00,'qty6')">
+                    <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- product 2 -->
+          <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="card shadow border-0 rounded-3 product-card">
+              <img src="assets/makara/image/image10.jpg" class="card-img-top" alt="Product" style="height: 350px;">
+              <div class="card-body">
+                <i class="fa-solid fa-star text-warning"></i>
+                <i class="fa-solid fa-star text-warning"></i>
+                <i class="fa-solid fa-star text-warning"></i>
+                <i class="fa-solid fa-star text-warning"></i>
+                <i class="fa-solid fa-star-half-stroke text-warning"></i>
+                <h1 class="card-title mt-2 fs-kp" style="font-size: 22px;"><span>ឈ្មោះ​ ៖</span>​ប្រអប់កាតុង</h1>
+                <p class="card-text fs-kp">តម្លៃ៖​ <span>$2.00</span></p>
+                <div class="d-flex align-items-center justify-content-between">
+                  <div class="d-flex align-items-center">
+                    <button class="btn btn-outline-secondary" onclick="changeQty(-1,'qty7')">-</button>
+                    <input type="text" id="qty7" value="1" class="form-control text-center mx-2" style="width:60px;"
+                      readonly>
+                    <button class="btn btn-outline-secondary" onclick="changeQty(1,'qty7')">+</button>
+                  </div>
+                  <button class="btn btn-success btn-sm fs-kp" onclick="addToCart('ប្រអប់កាតុង', 2.00,'qty7')">
+                    <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- product 3 -->
+          <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="card shadow border-0 rounded-3 product-card">
+              <img src="assets/makara/image/image11.jpg" class="card-img-top" alt="Product" style="height: 350px;">
+              <div class="card-body">
+                <i class="fa-solid fa-star text-warning"></i>
+                <i class="fa-solid fa-star text-warning"></i>
+                <i class="fa-solid fa-star text-warning"></i>
+                <i class="fa-solid fa-star text-warning"></i>
+                <i class="fa-solid fa-star-half-stroke text-warning"></i>
+                <h1 class="card-title mt-2 fs-kp" style="font-size: 22px;"><span>ឈ្មោះ​ ៖</span>​ក្រដាសបោះពុម្ព</h1>
+                <p class="card-text fs-kp">តម្លៃ៖​ <span>$1.00</span></p>
+                <div class="d-flex align-items-center justify-content-between">
+                  <div class="d-flex align-items-center">
+                    <button class="btn btn-outline-secondary" onclick="changeQty(-1,'qty8')">-</button>
+                    <input type="text" id="qty8" value="1" class="form-control text-center mx-2" style="width:60px;"
+                      readonly>
+                    <button class="btn btn-outline-secondary" onclick="changeQty(1,'qty8')">+</button>
+                  </div>
+                  <button class="btn btn-success btn-sm fs-kp" onclick="addToCart('ក្រដាសបោះពុម្ព', 1.00,'qty8')">
+                    <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end type papaer -->
+
   </main>
 
   <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <script src="assets/makara/index.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
