--- a/cart.html
+++ b/cart.html
@@ -16,7 +16,7 @@
     <div class="container my-5">
       <div class="row">
         <div class="col-md-8 offset-md-2">
-          <h2 class="mb-4 text-center fs-kp">សូមស្វាគមន៏មកកាន់កន្លែងត្រួតពិនិត្យការបញ្ញាទិញ</h2>
+          <h2 class="mb-4 text-center fs-kp fs-1">សូមស្វាគមន៏មកកាន់កន្លែងត្រួតពិនិត្យការបញ្ញាទិញ</h2>
           <table class="table table-bordered table-striped text-center align-middle">
             <thead class="table-dark">
               <tr>
