--- a/event2.html
+++ b/event2.html
@@ -18,23 +18,37 @@
 
 <body>
     <section class="mt-5">
-        <h1 class="text-center">Workshop Art, Culture & Green Economy</h1>
-        <p class="text-center text-black-50">កាលបរិច្ឆេទ៖ ២០ ធ្នូរ ២០២៥</p>
         <div class="container">
-            <div class="hero-banner"><img src="assets/Kropum/img/event6.jpg" class="hero-img" alt="" style="width: 100%;"></div>
-            <p class="mt-5">Date: 20 Dec 2025</p>
-            <div class="col-6">
+          <div class="row">
+            <div class="col-md-12 col-lg-6">
+              <div class="hero-banner"><img src="assets/Kropum/img/event6.jpg" class="hero-img" alt="" style="width: 95%;"></div>
+              <p class="mt-5">Date: 20 Dec 2025</p>
+
+            </div>
+            <div class="col-lg-6 ">
+              <div class="card border-0">
+                <div class="card-body mt-10">
+                <h1 class="text-center">Workshop Art, Culture & Green Economy</h1>
+                <p class="text-center text-black-50">កាលបរិច្ឆេទ៖ ២០ ធ្នូរ ២០២៥</p>
+
+                <p>Register Now: ​ <a href="#" class="text-decoration-none">Form</a></p>
+                <p>Venue: Raintree Development, Phnom Penh</p>
+                <p>Free of charge!</p>
+                <p>Time: 8:30 AM - 4:30 PM (Lunch provided)</p>
+                <p>Note: Selected applicants will be contacted for the workshop.</p>
+
+                </div>
+              </div>
+
+            </div>
+          </div>
+            <div class="col-lg-8">
                 <p>Discover the connection between Art, Culture & Green Economy!🌍🎨
 
                     <br>Join us for this FREE workshop on March 22-23, 2025, at Raintree Development, Phnom Penh. Learn
                     how creativity and sustainability go hand in hand, connect with experts, and explore innovative
                     ideas for a greener future!
                 </p>
-                <p>Register Now: ​ <a href="#" class="text-decoration-none">Form</a></p>
-                <p>Venue: Raintree Development, Phnom Penh</p>
-                <p>Free of charge!</p>
-                <p>Time: 8:30 AM - 4:30 PM (Lunch provided)</p>
-                <p>Note: Selected applicants will be contacted for the workshop.</p>
             </div>
         </div>
     </section>
