--- a/bg.html
+++ b/bg.html
@@ -1,52 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="assets/css/theme.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/Kropum/donate.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Projects with Fixed Background</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #f8f8f8;
+    }
+    /* Fixed background section */
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Hanuman:wght@100..900&family=Oswald:wght@200..700&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sevillana&display=swap"
-        rel="stylesheet">
-    <title>បរិច្ចាគ</title>
+    .hero-content {
+      max-width: 800px;
+      margin: auto;
+      text-shadow: 0 2px 6px rgba(0,0,0,0.5);
+    }
+
+    .hero-content h2 {
+      font-size: 36px;
+      margin-bottom: 15px;
+    }
+
+    /* Cards container */
+    .container {
+      max-width: 1200px;
+      margin: auto;
+      padding: 40px 20px;
+    }
+
+    .row {
+      display: flex;
+      gap: 20px;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+
+    .col-4 {
+      flex: 0 0 30%;
+      min-width: 280px;
+    }
+
+    /* Card styles */
+    .card {
+      position: relative;
+      overflow: hidden;
+      border-radius: 8px;
+      background: #fff;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-8px);
+    }
+
+    .card-img {
+      width: 100%;
+      height: 220px;
+      object-fit: cover;
+      display: block;
+    }
+
+    .card-body {
+      padding: 15px;
+      text-align: center;
+    }
+
+    .card-title {
+      font-size: 18px;
+      font-weight: bold;
+      margin: 10px 0 5px;
+    }
+
+    .card-text {
+      font-size: 14px;
+      color: #777;
+      text-transform: uppercase;
+    }
+
+    /* Hover Overlay */
+    .card-overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(0, 128, 0, 0.6);
+      opacity: 0;
+      transition: opacity 0.3s ease;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .card:hover .card-overlay {
+      opacity: 1;
+    }
+
+    .card-overlay-icon {
+      background: #fff;
+      padding: 12px;
+      border-radius: 50%;
+      font-size: 18px;
+      color: green;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    }
+  </style>
 </head>
-
 <body>
-<section class="mt-5">
-        <div class="container  rounded-3 gx-3 " >
-            <div class="row" >
-                <div class="col-md-12 col-lg-6 mt-15">
-                    <div class="card animate__animated animate__fadeInLeft border-0">
-                        <h1 class="text-center fw-bold ">កន្លែង<span class="text-success">បរិច្ចាគ</span></h1>
-                        <p class="text-center fw-bold">Drop-off points for plastic, clothes, and household goods <br>ចូលរួមជាមួយពួកយើង ដើម្បីការពារបរិស្ថាន</p>
-                        <p class="text-center fw-bold"></p>
 
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <img src="https://i.pinimg.com/736x/6f/9b/64/6f9b64479df8be4e6f7eb523aeb9be99.jpg" alt="" class="animate__animated animate__fadeInRight img-fluid rounded-3" style="width: 80%;">
-                </div>
-                     </div>
-                </div>
+  <!-- Hero Banner with Fixed Background -->
 
-    </section>
-    <section>
-          <div class="hero-banner">
-    <div class="hero-content">
-      <h2>កន្លែងបរិច្ចាគ និងកន្លែងកែច្នៃនៅកម្ពុជា</h2>
-      <p>(Places to Donate & Recycle in Cambodia)</p>
-    </div>
-  </div>
-
-    </section>
-    <section>
-          <div class="container">
+  <!-- Projects Section -->
+  <div class="container">
     <div class="row">
 
       <!-- Card 1 -->
@@ -158,9 +226,11 @@
       </div>
 
 
-    </section>
-        
-    <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-</body>
 
+
+
+    </div>
+  </div>
+
+</body>
 </html>
