--- a/event.html
+++ b/event.html
@@ -1,96 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="assets/css/theme.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/Kropum/kp.css"> 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Hanuman:wght@100..900&family=Oswald:wght@200..700&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sevillana&display=swap" rel="stylesheet">
-    <title>ព្រឺត្តិការណ៍</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="assets/css/theme.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/Kropum/test.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Hanuman:wght@100..900&family=Oswald:wght@200..700&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sevillana&display=swap"
+    rel="stylesheet">
+  <title>ព្រឺត្តិការណ៍</title>
 </head>
+
 <body>
-   <section class="m-5 ">
-    <h1 class="text-center">ព្រឹត្តិការណ៍</h1>
+  <section>
     <div class="container">
-        <div class="row gy-4">
-            <div class="col-lg-3">
-                <div class="card border-2">
-                    <img src="assets/Kropum/img/event4.jpg" alt="" class="card-img-top">
-                    <div class="card-body mt-2">
-                    <h5><a href="event1.html" class="text-decoration-none">Forest EcoPreneurs</a></h5>
-                    <p class="card-text">កាលបរិច្ឆេទ ៖ ១៩​ ធ្នូរ​ ២០២៥</p>
-                    </div>
-                </div>
-            </div>
-             <div class="col-lg-3">
-                <div class="card border-2">
-                    <img src="assets/Kropum/img/event6.jpg" alt="" class="card-img-top">
-                    <div class="card-body mt-2">
-                    <h5><a href="event2.html" class="text-decoration-none">Workshop Art,Culture</a></h5>
-                    <p class="card-text">កាលបរិច្ឆេទ ៖ ២០​ ធ្នូរ​ ២០២៥</p>
-                    </div>
-                </div>
-            </div>
-             <div class="col-lg-3">
-                <div class="card border-2">
-                    <img src="assets/Kropum/img/event7.jpg" alt="" class="card-img-top">
-                    <div class="card-body mt-2">
-                    <h5><a href="event3.html" class="text-decoration-none">Plastic Waste</a></h5>
-                    <p class="card-text">កាលបរិច្ឆេទ ៖ ០៣​ មករា​ ២០២៦</p>
-                    </div>
-                </div>
-            </div>
-             <div class="col-lg-3">
-                <div class="card border-2">
-                    <img src="assets/Kropum/img/Event1.jpg" alt="" class="card-img-top">
-                    <div class="card-body mt-2">
-                    <h5><a href="event4.html" class="text-decoration-none">ECO Leadership Discovery</a></h5>
-                    <p class="card-text">កាលបរិច្ឆេទ ៖ ១៩​ មករា​ ២០២៦</p>
-                </div>
-                </div>
-            </div>
-            <div class="col-lg-3">
-               <div class="card border-2">
-                    <img src="assets/Kropum/img/Event8.jpg" alt="" class="card-img-top">
-                    <div class="card-body mt-2">
-                        <h5><a href="event5.html" class="text-decoration-none">យុទ្ធនាការ សម្អាតទីក្រុង</a></h5>
-                        <p class="card-text">កាលបរិច្ឆេទ ៖ ៣១​ មករា​ ២០២៦</p>
-                    </div>
-               </div>
-            </div>
-            <div class="col-lg-3">
-                <div class="card border-2">
-                    <img src="assets/Kropum/img/event9.jpg" alt="" class="card-img-top">
-                <div class="card-body mt-2">
-                    <h5><a href="event6.html" class="text-decoration-none ">LCOY</a></h5>
-                    <p class="card-text">កាលបរិច្ឆេទ ៖ ១៩​ មករា​ ២០២៦</p>
-                </div>
-                </div>
-            </div>
-            <div class="col-lg-3">
-                <div class="card border-2">
-                    <img src="assets/Kropum/img/Event2.jpg" alt="" class="card-img-top">
-                <div class="card-body mt-2">
-                    <h5><a href="event7.html" class="text-decoration-none">យុវជនជជែកពិភាក្សា អំពីបរិស្ថាន</a></h5>
-                    <p class="card-text">កាលបរិច្ឆេទ ៖ ១៩​ មករា​ ២០២៦</p>
-                </div>
-                </div>
-            </div>
-            <div class="col-lg-3">
-               <div class="card border-2">
-                 <img src="assets/Kropum/img/EVENT3.jpg" alt="" class="card-img-top">
-                <div class="card-body mt-2">
-                    <h5><a href="event8.html" class="text-decoration-none">ប្រកួតរូបភាពអំពី Waste of life</a></h5>
-                    <p class="card-text">កាលបរិច្ឆេទ ៖ ១៩​ មករា​ ២០២៦</p>
-                </div>
-               </div>
-            </div>
+      <div class="row">
+        <div class=" col-md-12 col-lg-6 ">
+          <div class="card d-flex justify-content-center  mt-20 p-4 border-0">
+            <h1 class="animate__animated animate__fadeInLeft display-4 fw-bold">ព្រឺត្តិការណ៍ <span
+                class="text-success-emphasis align-content-center">បៃតង</span> & សកម្មភាព</h1>
+            <p class="animate__animated animate__fadeInLeft fw-bolder fa-3">សកម្មភាពតូចៗ បង្កើតអនាគតធំៗ, ចូលរួមបង្កើតសហគមន៍បៃតងជាមួយគ្នា</p>
+
+          </div>
         </div>
+        <div class="col-md-12 col-lg-6">
+          <img src="https://i.pinimg.com/1200x/c0/47/f1/c047f14b32e9bbe9c6164069d8c1a4e7.jpg" alt="banner"
+            class="img-fluid animate__animated animate__fadeInRight" style="width: 90%;">
+        </div>
+      </div>
     </div>
-   </section>
-    <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+</section>
+<section class="my-5">
+  <div class="container">
+    <h1 class="text-center fw-bold">សកម្មភាពបៃតង</h1>
+    <p class="text-center">សកម្មភាពបៃតងគឺជាសកម្មភាពដែលមានគោលបំណងក្នុងការពារបរិស្ថាន និងកាត់បន្ថយបញ្ហាបរិស្ថាន។</p>
+    <div class="row gy-4">
+      <div class=" col-sm-12 col-md-6 col-lg-3">
+        <div class="card">
+          <img src="assets/Kropum/img/Event4.jpg"
+            class="card-img-top" alt="event1">
+          <div class="card-body">
+            <h5 class="card-title fw-bold"><a href="event1.html" class="text-decoration-none text-success text-color">Forest EcoPreneurs</a></h5>
+            <p class="card-text">សកម្មភាពនេះមានគោលបំណងក្នុងការបង្កើតឱកាសសម្រាប់អ្នកស្រាវជ្រាវ...</p>
+            <p class="card-text text-muted"><i class="fa-solid fa-calendar-days text-success"></i> ១៩​ ធ្នូរ​ ២០២៥</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="card">
+          <img src="assets/Kropum/img/Event6.jpg"
+            class="card-img-top" alt="event2">
+          <div class="card-body">
+            <h5 class="card-title fw-bold"><a href="event2.html" class="text-decoration-none text-success">Workshop Art,Culture</a></h5>
+            <p class="card-text">សិក្ខាសាលានេះផ្តោតលើសិល្បៈ និងវប្បធម៌ ដើម្បីលើកកម្ពស់ការយល់ដឹងអំពីបរិស្ថាន....</p>
+            <p class="card-text text-muted"><i class="fa-solid fa-calendar-days text-success"></i> ១៩​ ធ្នូរ​ ២០២៥</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="card">
+          <img src="assets/Kropum/img/event7.jpg"
+            class="card-img-top" alt="event3">
+          <div class="card-body">
+            <h5 class="card-title fw-bold"><a href="event3.html" class="text-decoration-none text-success">Plastic Waste</a></h5>
+            <p class="card-text">សកម្មភាពនេះផ្តោតលើការកាត់បន្ថយសំណល់ប្លាស្ទិក និងលើកកម្ពស់ការប្រើ...</p>
+            <p class="card-text text-muted"><i class="fa-solid fa-calendar-days text-success"></i> ១៩​ ធ្នូរ​ ២០២៥</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="card">
+          <img src="assets/Kropum/img/event1.jpg"
+            class="card-img-top" alt="event3">
+          <div class="card-body">
+            <h5 class="card-title fw-bold"><a href="event4.html" class="text-decoration-none text-success">ECO Leadership Discovery</a></h5>
+            <p class="card-text">សកម្មភាពនេះផ្តោតលើការអភិវឌ្ឍជំនាញភាពជាអ្នកដឹកនាំបៃតង និងការបង្កើតឱកាស...</p>
+            <p class="card-text text-muted"><i class="fa-solid fa-calendar-days text-success"></i> ១៩​ ធ្នូរ​ ២០២៥</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="card">
+          <img src="assets/Kropum/img/Event8.jpg"
+            class="card-img-top" alt="event3">
+          <div class="card-body">
+            <h5 class="card-title fw-bold"><a href="event5.html" class="text-decoration-none text-success">យុទ្ធនាការ សម្អាតទីក្រុង</a></h5>
+            <p class="card-text">ចូលរួមសម្អាតទីក្រុង ដើម្បីបង្កើនភាពស្អាត និងបង្កើតបរិយាកាសរស់នៅល្អប្រសើរ...</p>
+            <p class="card-text text-muted"><i class="fa-solid fa-calendar-days text-success"></i> ១៩​ ធ្នូរ​ ២០២៥</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="card">
+          <img src="assets/Kropum/img/event9.jpg"
+            class="card-img-top" alt="event3">
+          <div class="card-body">
+            <h5 class="card-title fw-bold"><a href="event6.html" class="text-decoration-none text-success">LCOY</a></h5>
+            <p class="card-text">សកម្មភាព LCOY ផ្តោតលើការចូលរួមរបស់យុវជនក្នុងការពារបរិស្ថាន និង...</p>
+            <p class="card-text text-muted"><i class="fa-solid fa-calendar-days text-success"></i> ១៩​ ធ្នូរ​ ២០២៥</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="card">
+          <img src="assets/Kropum/img/Event2.jpg"
+
+            class="card-img-top" alt="event3">
+           
+          <div class="card-body">
+            <h5 class="card-title fw-bold"><a href="event7.html" class="text-decoration-none text-success">យុវជនជជែកពិភាក្សា អំពីបរិស្ថាន</a></h5>
+            <p class="card-text">សកម្មភាពនេះផ្តោតលើការចូលរួមរបស់យុវជនក្នុងការពិភាក្សា និងបង្កើតដំណោះស្រា...</p>
+            <p class="card-text text-muted"><i class="fa-solid fa-calendar-days text-success"></i> ១៩​ ធ្នូរ​ ២០២៥</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="card">
+          <img src="assets/Kropum/img/EVENT3.jpg"
+            class="card-img-top" alt="event3">
+          <div class="card-body">
+            <h5 class="card-title fw-bold"><a href="event8.html" class="text-decoration-none text-success">ប្រកួតរូបភាពអំពី Waste of life</a></h5>
+            <p class="card-text">សកម្មភាពប្រកួតរូបភាពនេះផ្តោតលើការបង្ហាញបញ្ហាសំណល់...</p>
+            <p class="card-text text-muted"><i class="fa-solid fa-calendar-days text-success"></i> ១៩​ ធ្នូរ​ ២០២៥</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+  <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
+
 </html>
