--- a/pin.html
+++ b/pin.html
@@ -69,7 +69,7 @@
                                     </form>
                                     <a href="" class="d-block text-center text-success mt-5">Resend Code</a>
                                     <div class="text-center mt-5">
-                                        <button class="btn btn-success px-5 m-auto">Verify</button>
+                                        <button class="btn m-auto"><a href="newpassword.html" class="btn px-5 btn-success rounded-pill">Verify</a></button>
                                     </div>
                                 </div>
                             </div>
