--- a/forgetpassword.html
+++ b/forgetpassword.html
@@ -44,7 +44,7 @@
                                         </div>
                                         <div class="col-lg-8 m-auto">
                                             <div class="mb-3">
-                                                <button class="btn btn-success w-100 rounded-pill"><a href="pin.html" class="btn">Send</a></button>
+                                                <button class="btn btn-success w-100 rounded-pill"><a href="pin.html" class="btn w-100">Send</a></button>
                                             </div>
                                         </div>
                                     </form>
