--- a/register.html
+++ b/register.html
@@ -44,8 +44,8 @@
                                     <div class="col-lg-8 m-auto">
                                         <div class="mb-4">
                                             <div class="form-floating">
-                                            <input type="text" id="" placeholder="Your Name" required
-                                                class="form-control border-0 border-bottom rounded-0 border-secondary pb-2 bg-transparent text-light">
+                                                <input type="text" id="" placeholder="Your Name" required
+                                                    class="form-control border-0 border-bottom rounded-0 border-secondary pb-2 bg-transparent text-light">
                                             </div>
                                         </div>
                                     </div>
@@ -72,7 +72,8 @@
                                     </div>
                                     <div class="col-lg-7 d-flex m-auto justify-content-between mt-3">
                                         <p class="text-white-50 fs-6">Already a Member?</p>
-                                        <a class="text-success card-link" href="signin.html" target="_parent">Sign in here</a>
+                                        <a class="text-success card-link" href="signin.html" target="_parent">Sign in
+                                            here</a>
                                     </div>
                                 </form>
                             </div>
