--- a/e-commerce.html
+++ b/e-commerce.html
@@ -40,7 +40,7 @@
     <!-- type Plastic -->
     <section style="margin-top: 80px;">
       <div class="container">
-        <h3 class="fw-bold mb-4 fs-kp text-center">ផលិតផលប្លាស្ទិចកែឆ្នៃ</h3>
+        <h3 class="fw-bold fs-kp text-center display-5" style="margin-bottom: 100px;" data-aos="fade-left">ផលិតផលប្លាស្ទិចកែឆ្នៃ</h3>
         <div class="row gy-4">
 
           <!-- Product 1 -->
@@ -57,14 +57,14 @@
                 <p class="card-text fs-kp">តម្លៃ៖​ <span>$5.00</span></p>
                 <div class="d-flex align-items-center justify-content-between">
                   <div class="d-flex align-items-center">
-                    <button class="btn btn-outline-secondary" onclick="changeQty(-1,'qty1')">-</button>
+                    <button class="btn btn-outline-success" onclick="changeQty(-1,'qty1')">-</button>
                     <input type="text" id="qty1" value="1" class="form-control text-center mx-2" style="width:60px;"
                       readonly>
-                    <button class="btn btn-outline-secondary" onclick="changeQty(1,'qty1')">+</button>
+                    <button class="btn btn-outline-success" onclick="changeQty(1,'qty1')">+</button>
                   </div>
-                  <button class="btn btn-success btn-sm fs-kp" onclick="addToCart('ថូផ្កា', 5.00,'qty1')">
+                  <a href="cart.html"  class="btn btn-success btn-sm fs-kp btn-addcart ">
                     <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -85,14 +85,14 @@
                 <p class="card-text fs-kp">តម្លៃ៖​ <span>$75.00</span></p>
                 <div class="d-flex align-items-center justify-content-between">
                   <div class="d-flex align-items-center">
-                    <button class="btn btn-outline-secondary" onclick="changeQty(-1,'qty2')">-</button>
+                    <button class="btn btn-outline-success" onclick="changeQty(-1,'qty2')">-</button>
                     <input type="text" id="qty2" value="1" class="form-control text-center mx-2" style="width:60px;"
                       readonly>
-                    <button class="btn btn-outline-secondary" onclick="changeQty(1,'qty2')">+</button>
+                    <button class="btn btn-outline-success" onclick="changeQty(1,'qty2')">+</button>
                   </div>
-                  <button class="btn btn-success btn-sm fs-kp" onclick="addToCart('កៅស៊ូ ប្លាស្ទិចថ្លា', 75.00,'qty2')">
+                  <a href="cart.html"  class="btn btn-success btn-sm fs-kp btn-addcart">
                     <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -112,14 +112,14 @@
                 <p class="card-text fs-kp">តម្លៃ៖​ <span>$10.00</span></p>
                 <div class="d-flex align-items-center justify-content-between">
                   <div class="d-flex align-items-center">
-                    <button class="btn btn-outline-secondary" onclick="changeQty(-1,'qty3')">-</button>
+                    <button class="btn btn-outline-success" onclick="changeQty(-1,'qty3')">-</button>
                     <input type="text" id="qty3" value="1" class="form-control text-center mx-2" style="width:60px;"
                       readonly>
-                    <button class="btn btn-outline-secondary" onclick="changeQty(1,'qty3')">+</button>
+                    <button class="btn btn-outline-success" onclick="changeQty(1,'qty3')">+</button>
                   </div>
-                  <button class="btn btn-success btn-sm fs-kp" onclick="addToCart('តុប្លាស្ទិច', 10.00,'qty3')">
+                  <a href="cart.html"  class="btn btn-success btn-sm fs-kp btn-addcart">
                     <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -139,14 +139,14 @@
                 <p class="card-text fs-kp">តម្លៃ៖​ <span>$3.00</span></p>
                 <div class="d-flex align-items-center justify-content-between">
                   <div class="d-flex align-items-center">
-                    <button class="btn btn-outline-secondary" onclick="changeQty(-1,'qty4')">-</button>
+                    <button class="btn btn-outline-success" onclick="changeQty(-1,'qty4')">-</button>
                     <input type="text" id="qty4" value="1" class="form-control text-center mx-2" style="width:60px;"
                       readonly>
-                    <button class="btn btn-outline-secondary" onclick="changeQty(1,'qty4')">+</button>
+                    <button class="btn btn-outline-success" onclick="changeQty(1,'qty4')">+</button>
                   </div>
-                  <button class="btn btn-success btn-sm fs-kp" onclick="addToCart('​ដបប្លាស្ទិច', 3.00,'qty4')">
+                  <a href="cart.html"  class="btn btn-success btn-sm fs-kp btn-addcart">
                     <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -166,14 +166,14 @@
                 <p class="card-text fs-kp">តម្លៃ៖​ <span>$7.00</span></p>
                 <div class="d-flex align-items-center justify-content-between">
                   <div class="d-flex align-items-center">
-                    <button class="btn btn-outline-secondary" onclick="changeQty(-1,'qty5')">-</button>
+                    <button class="btn btn-outline-success" onclick="changeQty(-1,'qty5')">-</button>
                     <input type="text" id="qty5" value="1" class="form-control text-center mx-2" style="width:60px;"
                       readonly>
-                    <button class="btn btn-outline-secondary" onclick="changeQty(1,'qty5')">+</button>
+                    <button class="btn btn-outline-success" onclick="changeQty(1,'qty5')">+</button>
                   </div>
-                  <button class="btn btn-success btn-sm fs-kp" onclick="addToCart('ធុងទឹកប្លាស្ទិច', 7.00,'qty5')">
+                  <a href="cart.html"  class="btn btn-success btn-sm fs-kp btn-addcart">
                     <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -184,9 +184,9 @@
     <!-- end type Plastic-->
 
     <!-- type paper -->
-    <section style="margin-top: 80px;">
+    <section style="margin-top: 100px;">
       <div class="container">
-        <h3 class="fw-bold mb-4 fs-kp text-center">ផលិតផលក្រដាសកែឆ្នៃ</h3>
+        <h3 class="fw-bold fs-kp text-center display-5" style="margin-bottom: 100px;" data-aos="fade-left">ផលិតផលក្រដាសកែឆ្នៃ</h3>
         <div class="row gy-4">
           <!-- product 1 -->
           <div class="col-sm-12 col-md-6 col-lg-4">
@@ -202,14 +202,14 @@
                 <p class="card-text fs-kp">តម្លៃ៖​ <span>$3.00</span></p>
                 <div class="d-flex align-items-center justify-content-between">
                   <div class="d-flex align-items-center">
-                    <button class="btn btn-outline-secondary" onclick="changeQty(-1,'qty6')">-</button>
+                    <button class="btn btn-outline-success" onclick="changeQty(-1,'qty6')">-</button>
                     <input type="text" id="qty6" value="1" class="form-control text-center mx-2" style="width:60px;"
                       readonly>
-                    <button class="btn btn-outline-secondary" onclick="changeQty(1,'qty6')">+</button>
+                    <button class="btn btn-outline-success" onclick="changeQty(1,'qty6')">+</button>
                   </div>
-                  <button class="btn btn-success btn-sm fs-kp" onclick="addToCart('សៀវភៅ', 3.00,'qty6')">
+                  <a href="cart.html"  class="btn btn-success btn-sm fs-kp btn-addcart">
                     <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -229,14 +229,14 @@
                 <p class="card-text fs-kp">តម្លៃ៖​ <span>$2.00</span></p>
                 <div class="d-flex align-items-center justify-content-between">
                   <div class="d-flex align-items-center">
-                    <button class="btn btn-outline-secondary" onclick="changeQty(-1,'qty7')">-</button>
+                    <button class="btn btn-outline-success" onclick="changeQty(-1,'qty7')">-</button>
                     <input type="text" id="qty7" value="1" class="form-control text-center mx-2" style="width:60px;"
                       readonly>
-                    <button class="btn btn-outline-secondary" onclick="changeQty(1,'qty7')">+</button>
+                    <button class="btn btn-outline-success" onclick="changeQty(1,'qty7')">+</button>
                   </div>
-                  <button class="btn btn-success btn-sm fs-kp" onclick="addToCart('ប្រអប់កាតុង', 2.00,'qty7')">
+                  <a href="cart.html"  class="btn btn-success btn-sm fs-kp btn-addcart">
                     <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -256,14 +256,14 @@
                 <p class="card-text fs-kp">តម្លៃ៖​ <span>$1.00</span></p>
                 <div class="d-flex align-items-center justify-content-between">
                   <div class="d-flex align-items-center">
-                    <button class="btn btn-outline-secondary" onclick="changeQty(-1,'qty8')">-</button>
+                    <button class="btn btn-outline-success" onclick="changeQty(-1,'qty8')">-</button>
                     <input type="text" id="qty8" value="1" class="form-control text-center mx-2" style="width:60px;"
                       readonly>
-                    <button class="btn btn-outline-secondary" onclick="changeQty(1,'qty8')">+</button>
+                    <button class="btn btn-outline-success" onclick="changeQty(1,'qty8')">+</button>
                   </div>
-                  <button class="btn btn-success btn-sm fs-kp" onclick="addToCart('ក្រដាសបោះពុម្ព', 1.00,'qty8')">
+                  <a href="cart.html"  class="btn btn-success btn-sm fs-kp btn-addcart">
                     <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
