--- a/cart.html
+++ b/cart.html
@@ -10,41 +10,129 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
 </head>
 
-<body>
+<body class="fs-kp">
 
   <main>
     <div class="container my-5">
       <div class="row">
         <div class="col-md-8 offset-md-2">
-          <h2 class="mb-4 text-center fs-kp fs-1">សូមស្វាគមន៏មកកាន់កន្លែងត្រួតពិនិត្យការបញ្ញាទិញ</h2>
-          <table class="table table-bordered table-striped text-center align-middle">
-            <thead class="table-dark">
-              <tr>
-                <th class="fs-kp">ចំនួនផលិតផល</th>
-                <th class="fs-kp">ឈ្មោះផលិតផល</th>
-                <th class="fs-kp">តម្លៃ</th>
-                <th class="fs-kp">សកម្មភាព</th>
-              </tr>
-            </thead>
-            <tbody id="cart-items"></tbody>
-            <tfoot>
-              <tr>
-                <th colspan="2" class="text-end fs-kp">តម្លៃសរុប:</th>
-                <th id="cart-total" class="text-danger"></th>
-              </tr>
-            </tfoot>
-          </table>
-          <div class="text-end">
-            <button class="btn btn-success btn-sm fs-kp">ការបញ្ជាទិញ</button>
+          <h2 class="mb-4 text-center fs-kp fs-1">សូមស្វាគមន៏មកកាន់កន្លែងត្រួតពិនិត្យការបញ្ជាទិញ</h2>
+
+          <div class="table-responsive">
+            <table class="table table-bordered table-striped text-center align-middle">
+              <thead class="table-dark">
+                <tr>
+                  <th>ចំនួនផលិតផល</th>
+                  <th>ឈ្មោះផលិតផល</th>
+                  <th>តម្លៃ</th>
+                  <th>សកម្មភាព</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>2</td>
+                  <td>ធុងទឹកប្លាស្ទិច</td>
+                  <td>$14.00</td>
+                  <td>
+                    <div class="d-flex justify-content-center gap-2 flex-wrap">
+                      <button class="btn btn-danger btn-sm">លុប</button>
+                      <button class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#editModal"
+                        data-name="ធុងទឹកប្លាស្ទិច" data-quantity="2">
+                        កែប្រែ
+                      </button>
+                      <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h5 class="modal-title" id="editModalLabel">កែប្រែផលិតផល</h5>
+                              <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                              <form>
+                                <div class="mb-3">
+                                  <label for="product-name" class="form-label">ឈ្មោះផលិតផល</label>
+                                  <p id="modal-product-name" class="fw-bold"></p>
+                                </div>
+                                <div class="mb-3">
+                                  <label for="product-quantity" class="form-label">ចំនួនផលិតផល</label>
+                                  <input type="number" class="form-control" id="modal-product-quantity" value="2" min="1" max="20">
+                                </div>
+                              </form>
+                            </div>
+                            <div class="modal-footer">
+                              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">បិទ</button>
+                              <button type="button" class="btn btn-primary" data-bs-dismiss="modal">រក្សាទុកការផ្លាស់ប្តូរ</button>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>កៅស៊ូប្លាស្ទិចថ្លា</td>
+                  <td>$75.00</td>
+                  <td>
+                    <div class="d-flex justify-content-center gap-2 flex-wrap">
+                      <button class="btn btn-danger btn-sm">លុប</button>
+                      <button class="btn btn-success btn-sm">កែប្រែ</button>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td>10</td>
+                  <td>តុប្លាស្ទិច</td>
+                  <td>$100.00</td>
+                  <td>
+                    <div class="d-flex justify-content-center gap-2 flex-wrap">
+                      <button class="btn btn-danger btn-sm">លុប</button>
+                      <button class="btn btn-success btn-sm">កែប្រែ</button>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td>5</td>
+                  <td>​ដបប្លាស្ទិច</td>
+                  <td>$15.00</td>
+                  <td>
+                    <div class="d-flex justify-content-center gap-2 flex-wrap">
+                      <button class="btn btn-danger btn-sm">លុប</button>
+                      <button class="btn btn-success btn-sm">កែប្រែ</button>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td>20</td>
+                  <td>​សៀវភៅ</td>
+                  <td>$60.00</td>
+                  <td>
+                    <div class="d-flex justify-content-center gap-2 flex-wrap">
+                      <button class="btn btn-danger btn-sm">លុប</button>
+                      <button class="btn btn-success btn-sm">កែប្រែ</button>
+                    </div>
+                  </td>
+                </tr>
+
+              </tbody>
+              <tfoot>
+                <tr>
+                  <th colspan="2" class="text-end fs-kp">តម្លៃសរុប:</th>
+                  <th id="cart-total" class="text-danger" colspan="2"></th>
+                </tr>
+              </tfoot>
+            </table>
+          </div>
+          <div class="text-end mt-3">
+            <button class="btn btn-success fs-kp">ការបញ្ជាទិញ</button>
           </div>
         </div>
       </div>
     </div>
 
   </main>
-
-
-
 
   <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <script src="assets/makara/index.js"></script>
