Update border color

--- a/pin.html
+++ b/pin.html
@@ -47,29 +47,29 @@
                                         <div class="row justify-content-evenly mb-5">
                                             <div class="col-lg-2">
                                                 <input type="number" style="width: 50px; height: 50px;"
-                                                    class="form-control text-center text-secondary" min="0" max="9"
+                                                    class="form-control text-center text-success border-success" min="0" max="9"
                                                     maxlength="1" oninput="this.value=this.value.slice(0,1)">
                                             </div>
                                             <div class="col-lg-2">
                                                 <input type="number" style="width: 50px; height: 50px;"
-                                                    class="form-control text-center text-secondary" min="0" max="9"
+                                                    class="form-control text-center text-success border-success" min="0" max="9"
                                                     maxlength="1" oninput="this.value=this.value.slice(0,1)">
                                             </div>
                                             <div class="col-lg-2">
                                                 <input type="number" style="width: 50px; height: 50px;"
-                                                    class="form-control text-center text-secondary" min="0" max="9"
+                                                    class="form-control text-center text-success border-success" min="0" max="9"
                                                     maxlength="1" oninput="this.value=this.value.slice(0,1)">
                                             </div>
                                             <div class="col-lg-2">
                                                 <input type="number" style="width: 50px; height: 50px;"
-                                                    class="form-control text-center text-secondary" min="0" max="9"
+                                                    class="form-control text-center text-success border-success" min="0" max="9"
                                                     maxlength="1" oninput="this.value=this.value.slice(0,1)">
                                             </div>
                                         </div>
                                     </form>
                                     <a href="" class="d-block text-center text-success mt-5">Resend Code</a>
                                     <div class="text-center mt-5">
-                                        <button class="btn m-auto"><a href="newpassword.html" class="btn px-5 btn-success rounded-pill">Verify</a></button>
+                                        <a href="newpassword.html" class="btn px-5 btn-success rounded-pill">Verify</a>
                                     </div>
                                 </div>
                             </div>
