--- a/forgetpassword.html
+++ b/forgetpassword.html
@@ -42,9 +42,9 @@
                                                     class="form-control border-0 rounded-pill bg-primary-subtle pb-2 text-success">
                                             </div>
                                         </div>
-                                        <div class="col-lg-8 m-auto">
-                                            <div class="mb-3">
-                                                <button class="btn btn-success w-100 rounded-pill"><a href="pin.html" class="btn w-100">Send</a></button>
+                                        <div class="col-lg-6 m-auto">
+                                            <div class="row justify-content-center mb-3">
+                                                <a href="pin.html" class="btn btn-success rounded-pill">Send</a>
                                             </div>
                                         </div>
                                     </form>
